Bug 130969. Active accessibility: fix MSAA focus events. r=bryner, saari. sr=jst